# Linux

2025/1/1_16_1/: Makefile  test.c
2025/2/2_12_1/: test  test.c
2025/2/2_13_1/: test  test.c
2025/2/2_13_2/: test  test.c
2025/2/2_13_3/: test  test.c
2025/3/3_10_1/: output.txt  test  test.c
2025/3/3_10_2/: test  test.c
2025/3/3_10_3/: log.txt  test  test.c
2025/3/3_11_1/: Makefile  mymk  mymk.cpp
2025/3/3_3_1/: test  test.c
2025/3/3_3_2/: test  test.c
2025/3/3_4_1/: test  test.c
2025/3/3_4_2/: test  test.c
2025/3/3_4_3/: test  test.c
2025/3/3_4_4/: test  test.c
2025/3/3_4_5/: test  test.c
2025/3/3_4_6/: test  test.c
2025/3/3_5_2/: test  test.c
2025/3/3_5_3/: other  other.cpp  test  test.c
2025/3/3_5_4/: Makefile  test  test.cpp
2025/3/3_5_5/: test  test.c
2025/3/3_6_1/: Makefile  test  test.cpp
2025/3/3_7_1/: test  test.c
2025/3/3_7_2/: test  test.c
2025/3/3_7_3/: test  test.c
2025/3/3_8_1/: test  test.c
2025/3/3_8_2/: test  test.c
2025/3/3_8_3/: Makefile  log.txt  test  test.c
2025/3/3_9_1/: Makefile  log1.txt  log2.txt  test  test.cpp
2025/5/5_21_3/: test.sh
2025/5/5_21_4/: test  test.cpp
2025/5/5_21_5/: test  test.cpp
2025/5/5_21_6/: test  test.cpp
2025/5/5_22_1/: test  test.cpp
2025/5/5_22_2/: test  test.cpp
2025/5/5_22_3/: test  test.cpp
2025/5/5_22_4/: test  test.cpp
2025/5/5_25_1/: test  test.cpp
2025/5/5_7_1/: Makefile  test  test.cpp
2025/5/5_7_2/: test.cpp  test.h
2025/6/6_21_1/: test  test.cpp
2025/6/6_22_1/: test  test.cpp
2025/6_9_1/: Makefile  test.cc
2025/8/8_25_1/: CMakeCache.txt  main  main.cpp
2025/8/8_25_2/: CMakeLists.txt  Makefile  cmake_install.cmake
2025/8/8_26_1/: CMakeLists.txt  main.cpp
2025/8/8_26_1/ct/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  TestCMakeTools-0.1.1-Linux.sh  TestCMakeTools-0.1.1-Linux.tar.Z  cmake_install.cmake  install_manifest.txt
2026/4m/4_12_1/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main
2026/4m/4_16_1/cmake_tools/: CMakeLists.txt  main.cpp
2026/5m/5_14_1/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  main  main.cpp
2026/5m/5_15_1/: CMakeLists.txt  main.cpp
2026/5m/5_16_1/: CMakeLists.txt
2026/5m/5_16_2/: CMakeLists.txt
2026/5m/5_16_2/sub/: sub.cmake
2026/5m/5_16_3/: CMakeLists.txt
2026/5m/5_17_1/: CMakeLists.txt
2026/5m/5_17_1/app/: CMakeLists.txt  main.cpp
2026/5m/5_17_1/my_lib/: CMakeLists.txt
2026/5m/5_17_1/my_lib/src/: add.cpp  sub.cpp
2026/5m/5_21_1/: CMakeLists.txt
2026/5m/5_21_1/app/: CMakeLists.txt  main.cpp
2026/5m/5_21_1/mymath/: CMakeLists.txt
2026/5m/5_21_1/mymath/include/: mymath.h
2026/5m/5_21_1/mymath/src/: add.cpp  (+2 more)
2026/5m/5_22_1/: CMakeLists.txt
2026/5m/5_22_1/app/: CMakeLists.txt  main.cpp
2026/5m/5_22_1/console_logger/: CMakeLists.txt  console_logger.h
2026/5m/5_22_1/logger_interface/: CMakeLists.txt  logger.cpp  logger.h
2026/5m/5_24_1/: CMakeLists.txt  main.cpp
2026/5m/5_25_1/: CMakeLists.txt
2026/5m/5_25_1/src/: CMakeLists.txt
2026/5m/5_26_1/: CMakeLists.txt
2026/5m/5_26_1/addsub/: CMakeLists.txt
2026/5m/5_26_1/app/: CMakeLists.txt  main.cpp
2026/5m/5_26_1/calculator/: CMakeLists.txt
2026/5m/5_26_1/muldiv/: CMakeLists.txt
2026/6m/6_10_1/: CMakeLists.txt  main.cpp
2026/6m/6_11_1/: CMakeLists.txt
2026/6m/6_11_1/app/: CMakeLists.txt
2026/6m/6_11_1/my_lib/: CMakeLists.txt
2026/6m/6_11_2/my_lib/: CMakeLists.txt
2026/6m/6_13_1/: CMakeLists.txt
2026/6m/6_13_1/my_log/: CMakeLists.txt  Config.cmake.in
2026/6m/6_13_1/my_log/include/: easylog.h
2026/6m/6_13_1/my_log/src/: easylog.cpp
2026/6m/6_13_2/: CMakeLists.txt  main.cpp
2026/6m/6_13_3/: CMakeLists.txt  main.cpp
2026/6m/6_13_4/: CMakeLists.txt
2026/6m/6_13_4/app/: CMakeLists.txt  main.cpp
2026/6m/6_13_4/my_lib/: CMakeLists.txt
2026/6m/6_13_5/: CMakeLists.txt  main.cpp
2026/6m/6_13_5/proto/: person.proto
2026/6m/6_14_1/: CMakeLists.txt
2026/6m/6_14_2/: CMakeLists.txt
2026/6m/6_14_3/: CMakeLists.txt
2026/6m/6_14_3/sub/: CMakeLists.txt
2026/6m/6_14_4/: CMakeLists.txt
2026/6m/6_14_5/: CMakeLists.txt
2026/6m/6_15_1/: CMakeLists.txt
2026/6m/6_15_10/: CMakeLists.txt
2026/6m/6_15_2/: CMakeLists.txt
2026/6m/6_15_3/: CMakeLists.txt
2026/6m/6_15_4/: CMakeLists.txt
2026/6m/6_15_5/: CMakeLists.txt
2026/6m/6_15_6/: CMakeLists.txt
2026/6m/6_15_7/: CMakeLists.txt
2026/6m/6_15_8/: CMakeLists.txt
2026/6m/6_15_9/: CMakeLists.txt
2026/6m/6_5_1/: CMakeLists.txt  main.cpp
2026/6m/6_8_1/: CMakeLists.txt
2026/6m/6_8_1/app/: CMakeLists.txt  main.cpp
2026/6m/6_8_1/math/: CMakeLists.txt
2026/6m/6_8_1/utils/: CMakeLists.txt
2026/6m/6_8_2/: CMakeLists.txt
2026/6m/6_8_2/sub/: CMakeLists.txt
2026/6m/6_9_1/: CMakeLists.txt
2026/6m/6_9_1/my_lib/: CMakeLists.txt
2026/7m/7_16_1/: CMakeLists.txt  main.cpp
2026/7m/7_16_2/: main.cpp
2026/7m/7_16_3/: main.cpp
2026/7m/7_16_4/: main.cpp
2026/7m/7_16_5/: CMakeLists.txt  main.cpp
2026/7m/7_18_1/: main.cpp
2026/7m/7_18_2/: main.cpp
2026/7m/7_18_3/: main.cpp
2026/7m/7_18_4/: main.cpp
2026/7m/7_18_5/: main.cpp
2026/7m/7_19_3/: main.cpp
2026/7m/7_19_4/: main.cpp
2026/7m/7_19_5/: main.cpp
2026/7m/7_19_6/: CMakeLists.txt  main.cpp  other.py
2026/7m/7_19_7/: main.cpp
2026/7m/7_19_8/: CMakeLists.txt  main.cpp
2026/7m/7_20_1/: main.cpp
2026/7m/7_20_2/: main.cpp
2026/7m/7_20_3/: log.txt  main.cpp
2026/7m/7_20_4/: main.cpp
2026/7m/7_22_1/: main.cpp
2026/7m/7_22_2/: log.txt  main.cpp
2026/7m/7_22_3/: CMakeLists.txt  log.txt  main.cpp
2026/7m/7_23_1/: log.txt  main.cpp
2026/7m/7_23_2/: mystdio.cpp  mystdio.h
2026/7m/7_23_3/: CMakeLists.txt  log.txt  mystdio.cpp  mystdio.h  usercode.cpp
project/log/example/: test
project/log/logs/: Makefile  buffer.hpp  format.hpp  level.hpp  logger.hpp  looper.hpp  message.hpp  mlog.h  sink.hpp  test  test.cc  util.hpp
project/mcmake/test1/: CMake.cmake
(+10 files in other folders)
